app/assets/stylesheets/main.scss
.header-nav-inner {
}

.header-nav-top-level {
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  border-bottom: 1px solid #e1e3df;
  box-shadow: none;
  background-color: #ffffff;
  position: relative;
  min-width: 100%;
  box-sizing: border-box;
  display: inline-block;
}

.header-nav-inner {
  width: auto;
  text-align: left;
  margin: 0 auto;
  box-sizing: border-box;
  height: 80px;
  padding-left: 18px;
  padding-right: 18px;
  /* display: inline-block; */
  float: none;
  position: relative;
  display: block;
}

#craftsy-logo {
  position: relative;
  float: left;
  margin-right: 20px;
  color: #f45800;
  box-sizing: border-box;
  display: block;
  //  font-weight: 525;
  font-weight: 300;
  background-image: image-url('logo_transparent.png');
  background-size: 110px;
  width: 100px;
  height: 80px;
  background-repeat: no-repeat;
  top: -14px;
  margin-left: -20px;
  margin-right: 10px;
}

#craftsy-logo a {
  background: none;
  display: block;
  position: absolute;
  top: 23%;
  width: 100%;
  height: 100%;
  color: #f45800;
  /* margin-top: 2px; */
  text-decoration: none;
  overflow: hidden;
  font-family: 'Baskerville Old Face';
  padding: 0;
  font-size: 34px;
}

.header-search-div-wrapper {
  margin: 0;
  display: block;
}

.header-search-bar-outer {
  position: relative;
  float: left;
  width: 35%;
  display: block;
  text-align: left;
  font-size: 14px;
  line-height: 1.4;
}

.header-search-nav-form {
  position: relative;
  float: left;
  width: 100%;
  display: block;
  height: 80px;
}

.header-search-bar-inner {
  position: absolute;
  display: table;
  width: 100%;
  top: 30%;
  height: 34px;
  box-sizing: border-box;
  margin: 0;
}

.header-search-bar-input-wrapper {
  white-space: nowrap;
  display: table-cell;
  vertical-align: top;
  width: 100%;
  margin: 0;
}

#search-query {
  position: relative;
  margin-top: 0;
  margin-bottom: 0;
  border-right: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  height: 34px;
  width: 100%;
  top: 50%;
  border: 1px solid #cfcbc8;
  background: #f9f9f8;
  padding: 6px 10px;
  margin-left: 0;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px #e9e9e8, 0 0 0 1000px #fbfbfa inset;
  font-size: 14px;
}

#global-header {
  font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
    'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
}

.header-search-button-wrapper .btn-primary {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  line-height: 17px;
  height: 34px;
  padding: 7px 15px 8px;
}

.btn-primary {
  color: #fff;
  border-color: rgba(0, 0, 0, 0.1);
  background-color: #222;
}

.btn-primary:hover,
.header-nav-signin,
.icon-avatar,
.session-submit {
  cursor: pointer;
}

.btn {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  display: inline-block;
  font-family: inherit;
  font-size: 14px;
  font-weight: bold;
  height: 38px;
  line-height: 1.4;
  padding: 8px 12px;
  text-align: center;
  text-decoration: none;
  user-select: none;
  white-space: nowrap;
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  box-sizing: border-box;
}

ul,
menu,
dir {
  display: block;
  list-style-type: disc;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  padding-inline-start: 40px;
}

.account-nav {
  float: right;
  margin: 0;
  padding-left: 0;
  height: 80px;
  list-style-position: outside;
  padding-inline-start: 40px;
}

.account-nav li {
  /* color: blue; */

  font-family: 'Graphik Webfont', -apple-system, BlinkMacSystemFont, 'Roboto',
    'Droid Sans', 'Segoe UI', 'Helvetica', Arial, sans-serif;
  font-size: 14px;
  line-height: 16px;
  line-height: 1.4;
  float: left;
  display: block;
  position: relative;
  list-style: none;
  border: 0 none;
  margin: 0;
  padding: 0;
  /* top: 30%; */

  border: 1px solid transparent;
  height: auto;
  /* margin-top: 23px; */
  /* float: left; */
  /* padding: 8px; */
  /* line-height: 16px; */
  font-size: 14px;
  text-decoration: none;
  box-sizing: border-box;
}

.account-nav a:link {
  text-decoration: none;
}

.account-nav a:visited {
  text-decoration: none;
}

.account-nav a:hover {
  text-decoration: underline;
  /* background-color: yellow; */
}

.account-nav a:active {
  text-decoration: none;
}

li {
  display: list-item;
}

.account-nav li:nth-last-child(2) a {
  /* background-color: green; */
  border-left: 1px solid #e1e3df;
  border-right: 1px solid #e1e3df;
}

.text-sell-etsy {
  margin-top: 28px !important;
}

.account-nav li a,
.account-nav li button {
  /* border: 1px solid transparent; */
  height: auto;
  margin-top: 14px;
  display: block;
  float: left;
  padding: 8px;
  line-height: 16px;
  font-size: 14px;
  color: #222;
}

.header-nav-register {
  margin-top: 26px !important;
}

.header-nav-signin {
  margin-top: 26px !important;
}

.icon-img-cart > .fa-shopping-cart {
  /* border: 1px solid transparent; */
  font-size: 20px;
  margin-top: -10px;
  padding-bottom: 2px;
}

.icon-img-question > .fa-question-circle {
  /* border: 1px solid transparent; */
  font-size: 24px;
  margin-top: -10px;
  padding-bottom: 2px;
  padding-left: 2px;
}

.account-nav a:not(:hover):not(:focus):not(:active) #sign-in-link {
  /* color: #222; */
  box-sizing: border-box;
  border: 1px solid black;
  border-radius: 3px;
  font-size: 99px;
}

/* .sign-in-link>a {
    height: auto;
    margin-top: 23px;
    margin-right: 18px;
    float: left;
    padding: 8px;
    line-height: 16px;
    font-size: 14px;
    border: 1px solid;
    text-decoration: none;
    border-radius: 3px;
    box-sizing: border-box;
    color: #222;
  } */

.sign-in-link button {
  border: 1px solid black;
  border-radius: 3px;
  margin-right: 12px;
  /* text-decoration: underline; */
}

.sign-in-link button:hover {
  text-decoration: none;
  background-color: #222;
  color: white;
  border-radius: 3px;
}

// .profile-drop-down {

[class*='avatar'] {
  // display: inline-block !important;
  position: relative;
  background-image: url('default_avatar.png');
  background-size: 30px 30px;
  background-repeat: no-repeat;
  vertical-align: bottom;
  overflow: hidden;
  height: 40px;
  width: 30px;
  margin-bottom: 0px;
  border-radius: 60%;
}

.container-profile-picture .icon-avatar {
  background-position: 5px -5px;
  padding-top: 25px;
}

.developer-links {
  display: flex;
  justify-content: flex-end;
}

.linkedin-link {
  background-image: url('linked-in.png'); /* image provided by Linked-In is under copywrite law */
  background-size: cover;
  height: 50px;
  width: 50px;
  margin-right: 10px;
  margin-top: 10px;
  top: 0;
}

.github-link {
  background-image: url('github.png'); /* image provided by Github is under copywrite law */
  background-size: cover;
  height: 50px;
  width: 50px;
  margin-top: 10px;
  margin-right: 10px;
  top: 0;
}

.header-nav-register {
  border: none;
  // margin-right:
}

.header-nav-register:hover {
  cursor: pointer;
  text-decoration: underline;
}

.page-body-container {
  margin-top: 40px;
  margin-left: 40px;
  margin-right: 40px;
}

.page-not-found-header,
.page-not-found-link {
  font-size: 30px;
}

// [class*="icon-"] {
//   border: 5px solid red;
//   display: inline-block !important;
//   background-image: image-url("cart.png");
//   background-size: 30px 30px;
//   background-repeat: no-repeat;
//   vertical-align: bottom;
//   overflow: hidden;
//   height: 100px !important;
//   width: 30px;
//   /* padding-top: 30px !important; */
// }
//
// .icon-sell-etsy {
//   background-position: 0 0;
// }

